import "Event.proto";

package com.lvl6.proto;

option java_outer_classname = "ProtocolsProto";

enum EventProtocolRequest {
	C_CHAT_EVENT = 0;
	C_BATTLE_EVENT = 1;
	C_TASK_ACTION_EVENT = 3;
	C_RETRIEVE_USER_EQUIP_FOR_USER = 4;
	C_STARTUP_EVENT = 5;
	C_RETRIEVE_STATIC_DATA_FOR_SHOP_EVENT = 8;
	C_ARMORY_EVENT = 9;
	C_IN_APP_PURCHASE_EVENT = 10;
	C_GENERATE_ATTACK_LIST_EVENT = 16;
	C_PURCHASE_NORM_STRUCTURE_EVENT = 17;
	C_MOVE_OR_ROTATE_NORM_STRUCTURE_EVENT = 18;
	C_SELL_NORM_STRUCTURE_EVENT = 19;
	C_UPGRADE_NORM_STRUCTURE_EVENT = 20;
	C_RETRIEVE_CURRENCY_FROM_NORM_STRUCTURE_EVENT = 21;
	C_FINISH_NORM_STRUCT_WAITTIME_WITH_DIAMONDS_EVENT = 23;
	C_NORM_STRUCT_WAIT_COMPLETE_EVENT = 24;
	C_CRIT_STRUCTURE_ACTION_EVENT = 26;
	C_LOAD_PLAYER_CITY_EVENT = 27;
	C_RETRIEVE_STATIC_DATA_EVENT = 28;
	C_QUEST_ACCEPT_EVENT = 29;
	C_USER_QUEST_DETAILS_EVENT = 30;
	C_QUEST_REDEEM_EVENT = 31;
	C_PURCHASE_CITY_EXPANSION_EVENT = 32;
	C_EXPANSION_WAIT_COMPLETE_EVENT = 33;
	C_LEVEL_UP_EVENT = 35;
	C_ENABLE_APNS_EVENT = 36;
	C_USER_CREATE_EVENT = 38;
	C_EQUIP_EQUIPMENT_EVENT = 39;
	C_LOAD_NEUTRAL_CITY_EVENT = 41;
	C_RETRIEVE_USERS_FOR_USER_IDS_EVENT = 42;
	C_POST_ON_PLAYER_WALL_EVENT = 43;
	C_RETRIEVE_PLAYER_WALL_POSTS_EVENT = 44;
	C_EARN_FREE_DIAMONDS_EVENT = 45;
	C_RECONNECT_EVENT = 46;
	C_SUBMIT_EQUIPS_TO_BLACKSMITH = 48;							//ADD "_EVENT" ON FORCED UPDATE
	C_FORGE_ATTEMPT_WAIT_COMPLETE = 49;							//ADD "_EVENT" ON FORCED UPDATE
	C_FINISH_FORGE_ATTEMPT_WAITTIME_WITH_DIAMONDS = 50;			//ADD "_EVENT" ON FORCED UPDATE
	C_COLLECT_FORGE_EQUIPS = 51;								//ADD "_EVENT" ON FORCED UPDATE
	C_CHARACTER_MOD_EVENT = 52;
	C_RETRIEVE_LEADERBOARD_EVENT = 53;
	C_SEND_GROUP_CHAT_EVENT = 54;
	C_CREATE_CLAN_EVENT = 56;
	C_LEAVE_CLAN_EVENT = 57;
	C_REQUEST_JOIN_CLAN_EVENT = 58;
	C_RETRACT_REQUEST_JOIN_CLAN_EVENT = 59;
	C_APPROVE_OR_REJECT_REQUEST_TO_JOIN_CLAN_EVENT = 60;
	C_TRANSFER_CLAN_OWNERSHIP = 61;
	C_RETRIEVE_CLAN_INFO_EVENT = 62;
	C_CHANGE_CLAN_DESCRIPTION_EVENT = 63;
	C_POST_ON_CLAN_BULLETIN_EVENT = 64;
	C_RETRIEVE_CLAN_BULLETIN_POSTS_EVENT = 65;
	C_BOOT_PLAYER_FROM_CLAN_EVENT = 66;
	C_RETRIEVE_THREE_CARD_MONTE_EVENT = 67;
	C_PLAY_THREE_CARD_MONTE_EVENT = 68;
	C_BEGIN_GOLDMINE_TIMER_EVENT = 69;
	C_COLLECT_FROM_GOLDMINE_EVENT = 70;
	C_PICK_LOCK_BOX_EVENT = 71;
	C_BOSS_ACTION_EVENT = 72;
	C_BEGIN_CLAN_TOWER_WAR = 73;
	C_UPGRADE_CLAN_TIER_EVENT = 74;
	C_CONCEDE_CLAN_TOWER_WAR = 75;
	C_RETRIEVE_LEADERBOARD_RANKINGS_EVENT = 76;
	C_SUBMIT_EQUIP_ENHANCEMENT_EVENT = 78;
	C_COLLECT_EQUIP_ENHANCEMENT_EVENT = 79;
	C_RETRIEVE_CLAN_TOWER_SCORES_EVENT = 80;
	C_RETRIEVE_BOOSTER_PACK_EVENT = 81;
	C_PURCHASE_BOOSTER_PACK_EVENT = 82;
	C_RESET_BOOSTER_PACK_EVENT = 83;
	C_CHANGE_CLAN_JOIN_TYPE_EVENT = 84;
	C_PURCHASE_FORGE_SLOT_EVENT = 85;
	C_PRESTIGE_EVENT = 86;
	C_PRIVATE_CHAT_POST_EVENT = 87;
	C_RETRIEVE_PRIVATE_CHAT_POST_EVENT = 88;
	C_REDEEM_USER_LOCK_BOX_ITEMS_EVENT = 89;
	C_REDEEM_USER_CITY_GEMS_EVENT = 95;
	C_BEGIN_DUNGEON_EVENT = 96;
	C_END_DUNGEON_EVENT = 97;
	C_REVIVE_IN_DUNGEON_EVENT = 98;
	C_QUEUE_UP_EVENT = 99;
	C_UPDATE_EQUIP_DURABILITY_EVENT = 200;
	
	//STOP AT 99, SKIP TO 200
	C_LOGOUT_EVENT = 101;

	A_ADMIN_UPDATE = 300;
}

enum EventProtocolResponse {
	S_CHAT_EVENT = 0;
	S_BATTLE_EVENT = 1;
	S_TASK_ACTION_EVENT = 3;
	S_RETRIEVE_USER_EQUIP_FOR_USER = 4;
	S_STARTUP_EVENT = 5;
	S_RETRIEVE_STATIC_DATA_FOR_SHOP_EVENT = 8;
	S_ARMORY_EVENT = 9;
	S_IN_APP_PURCHASE_EVENT = 10;
	S_GENERATE_ATTACK_LIST_EVENT = 16;	
	S_PURCHASE_NORM_STRUCTURE_EVENT = 17;
	S_MOVE_OR_ROTATE_NORM_STRUCTURE_EVENT = 18;
	S_SELL_NORM_STRUCTURE_EVENT = 19;
	S_UPGRADE_NORM_STRUCTURE_EVENT = 20;
	S_RETRIEVE_CURRENCY_FROM_NORM_STRUCTURE_EVENT = 21;
	S_FINISH_NORM_STRUCT_WAITTIME_WITH_DIAMONDS_EVENT = 23;
	S_NORM_STRUCT_WAIT_COMPLETE_EVENT = 24;
	S_CRIT_STRUCTURE_ACTION_EVENT = 26;	
	S_LOAD_PLAYER_CITY_EVENT = 27;
	S_RETRIEVE_STATIC_DATA_EVENT = 28;
	S_QUEST_ACCEPT_EVENT = 29;
	S_USER_QUEST_DETAILS_EVENT = 30;
	S_QUEST_REDEEM_EVENT = 31;
	S_PURCHASE_CITY_EXPANSION_EVENT = 32;
	S_EXPANSION_WAIT_COMPLETE_EVENT = 33;
	S_LEVEL_UP_EVENT = 35;
	S_ENABLE_APNS_EVENT = 36;
	S_USER_CREATE_EVENT = 38;
	S_EQUIP_EQUIPMENT_EVENT = 39;
	S_LOAD_NEUTRAL_CITY_EVENT = 41;
	S_RETRIEVE_USERS_FOR_USER_IDS_EVENT = 42;
	S_POST_ON_PLAYER_WALL_EVENT = 43;
	S_RETRIEVE_PLAYER_WALL_POSTS_EVENT = 44;
	S_EARN_FREE_DIAMONDS_EVENT = 45;
	S_RECONNECT_EVENT = 46;
	S_SUBMIT_EQUIPS_TO_BLACKSMITH = 48;							//ADD "_EVENT" ON FORCED UPDATE
	S_FORGE_ATTEMPT_WAIT_COMPLETE = 49;							//ADD "_EVENT" ON FORCED UPDATE
	S_FINISH_FORGE_ATTEMPT_WAITTIME_WITH_DIAMONDS = 50;			//ADD "_EVENT" ON FORCED UPDATE
	S_COLLECT_FORGE_EQUIPS = 51;								//ADD "_EVENT" ON FORCED UPDATE
	S_CHARACTER_MOD_EVENT = 52;
	S_RETRIEVE_LEADERBOARD_EVENT = 53;
	S_SEND_GROUP_CHAT_EVENT = 54;
	S_CREATE_CLAN_EVENT = 56;
	S_LEAVE_CLAN_EVENT = 57;
	S_REQUEST_JOIN_CLAN_EVENT = 58;
	S_RETRACT_REQUEST_JOIN_CLAN_EVENT = 59;
	S_APPROVE_OR_REJECT_REQUEST_TO_JOIN_CLAN_EVENT = 60;
	S_TRANSFER_CLAN_OWNERSHIP = 61;
	S_RETRIEVE_CLAN_INFO_EVENT = 62;
	S_CHANGE_CLAN_DESCRIPTION_EVENT = 63;
	S_POST_ON_CLAN_BULLETIN_EVENT = 64;
	S_RETRIEVE_CLAN_BULLETIN_POSTS_EVENT = 65;
	S_BOOT_PLAYER_FROM_CLAN_EVENT = 66;
	S_RETRIEVE_THREE_CARD_MONTE_EVENT = 67;
	S_PLAY_THREE_CARD_MONTE_EVENT = 68;
	S_BEGIN_GOLDMINE_TIMER_EVENT = 69;
	S_COLLECT_FROM_GOLDMINE_EVENT = 70;
	S_PICK_LOCK_BOX_EVENT = 71;
	S_BOSS_ACTION_EVENT = 72;
	S_BEGIN_CLAN_TOWER_WAR = 73;
	S_UPGRADE_CLAN_TIER_EVENT = 74;
	S_CONCEDE_CLAN_TOWER_WAR_EVENT = 75;
	S_CHANGED_CLAN_TOWER_EVENT = 76;
	S_RETRIEVE_LEADERBOARD_RANKINGS_EVENT = 77;
	S_SUBMIT_EQUIP_ENHANCEMENT_EVENT = 78;
	S_COLLECT_EQUIP_ENHANCEMENT_EVENT = 79;
	S_RETRIEVE_CLAN_TOWER_SCORES_EVENT = 80;
	S_RETRIEVE_BOOSTER_PACK_EVENT = 81;
	S_PURCHASE_BOOSTER_PACK_EVENT = 82;
	S_RESET_BOOSTER_PACK_EVENT = 83;
	S_CHANGE_CLAN_JOIN_TYPE_EVENT = 84;
	S_PURCHASE_FORGE_SLOT_EVENT = 85;
	S_PRESTIGE_EVENT = 86;
	S_PRIVATE_CHAT_POST_EVENT = 87;
	S_RETRIEVE_PRIVATE_CHAT_POST_EVENT = 88;
	S_REDEEM_USER_LOCK_BOX_ITEMS_EVENT = 89;
	S_REDEEM_USER_CITY_GEMS_EVENT = 95;
	S_BEGIN_DUNGEON_EVENT = 96;
	S_END_DUNGEON_EVENT = 97;
	S_REVIVE_IN_DUNGEON_EVENT = 98;	
	S_QUEUE_UP_EVENT = 99;	
	S_UPDATE_EQUIP_DURABILITY_EVENT = 200;
		
	//STOP AT 99, SKIP TO 200
	S_UPDATE_CLIENT_USER_EVENT = 101;
	S_QUEST_COMPLETE_EVENT = 102;
	S_REFERRAL_CODE_USED_EVENT = 103;	
	S_PURGE_STATIC_DATA_EVENT = 104;	
	S_RECEIVED_GROUP_CHAT_EVENT = 105;
	S_SEND_ADMIN_MESSAGE_EVENT = 106;
	S_GENERAL_NOTIFICATION_EVENT = 107;
	S_RECEIVED_RARE_BOOSTER_PURCHASE_EVENT = 108;
}